--- a/assets/style.css
+++ b/assets/style.css
@@ -505,7 +505,7 @@ ul{
 /* book gallery */
 /*Partner */
 #partner{
-    background: url(PAGES/bg);
+    background: url(pages/wordpress.jpg);
     padding: 20px 0 40px 0;
     
 }
