--- a/assets/style.css
+++ b/assets/style.css
@@ -506,6 +506,7 @@ ul{
 /*Partner */
 #partner{
     background: url(pages/wordpress.jpg);
+    background-images: url(pages/wordpress.jpg);
     padding: 20px 0 40px 0;
     
 }
