--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,6 @@ ul{
     font-size: .79rem;
     color: black;
     z-index: 1;
-    position: right;
 
 }
 
@@ -63,7 +62,7 @@ ul{
 
 /* Showcase */
 #showcase{
-    background-image: url(PAGES/banner1.png);
+    background-image: url(pages/banner1.png);
     background-size: cover;
     background-repeat: no-repeat;
     height: 338px;
@@ -93,7 +92,7 @@ ul{
         top: -110px!important;
     }
     .child-standing-reading{
-        right: 200px!important;
+        right: 20px!important;
         top: -200px!important;
         height: 300px!important;
     }
